--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,15 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/cv/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-
-
+  <link rel="stylesheet" href="assets/css/reaset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Structure page HTML</title>
 </head>
 <body>
   <header>
     <figure>
       <!--Cesi une image-->
-
-      <img src="https://picsum.photos/1600/300" alt="Photo Deco">
-<!--       <figcaption>Rima</figcaption> -->
+      <img src="assets/img/dev-worker_x2100.jpg" alt="Photo Deco" srcset="assets/img/dev-worker_x2100.jpg 2100w, assets/img/dev-worker_x1550.jpg 1500w, assets/img/dev-worker_x755.jpg 755w, assets/img/dev-worker_x390.jpg 390w" sizes=" (min-with:400) 755px,(min-with:960) 1550px, (min-with:1600) 2100px; 100vw">
      </figure> 
     <nav>
       <ul class="nav-header">
